--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,6 +82,18 @@ body {
     @apply flex items-center;
 }
 
+.col {
+    @apply flex flex-col justify-center items-center;
+}
+
+.col-h {
+    @apply flex flex-col items-center;
+}
+
+.col-v {
+    @apply flex flex-col justify-center;
+}
+
 .countach {
     font-family: 'Countach', sans-serif;
     font-weight: 400;
@@ -226,6 +238,35 @@ ol {
     list-style: auto !important;
     margin-inline: 2rem !important;
     margin-bottom: 1rem !important;
+}
+
+.semibold {
+    font-weight: 600;
+}
+
+.subindex {
+    position: relative;
+    bottom: -4px;
+    font-size: 8pt;
+}
+
+.btn {
+    padding: 0.25rem 0.625rem;
+    background-color: rgb(66 65 67);
+    /* Soft background shadow */
+    background-image: linear-gradient(180deg, #49484a, #424143);
+    border: 1px solid #333;
+    border-radius: 0.5rem;
+}
+
+.btn:hover {
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .2);
+    border: 1px solid #333;
+    background-image: linear-gradient(180deg, #49484a, #424143);
+}
+
+.btn disabled {
+    opacity: 0.3;
 }
 
 @keyframes spin {
