--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -265,7 +265,7 @@ ol {
     background-image: linear-gradient(180deg, #49484a, #424143);
 }
 
-.btn disabled {
+.btn:disabled {
     opacity: 0.3;
 }
 
