--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -22,6 +22,10 @@
 .modal-content {
     margin: auto;
     padding: 20px 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .modal-table {
