--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -257,6 +257,7 @@ ol {
     background-image: linear-gradient(180deg, #49484a, #424143);
     border: 1px solid #333;
     border-radius: 0.5rem;
+    white-space: nowrap;
 }
 
 .btn:hover {
@@ -269,137 +270,57 @@ ol {
     opacity: 0.3;
 }
 
-@keyframes spin {
-    0% {
-        transform: translateY(-50%) rotate(0deg);
-        /* Initial position and rotation */
-    }
-
-    100% {
-        transform: translateY(-50%) rotate(360deg);
-        /* Keep translate during rotation */
-    }
+/* Table */
+.matrix-table {
+    /* Width same regardless of text */
+    table-layout: fixed;
+    background-color: rgb(66 65 67);
 }
 
-/* Don't translate at small screens */
-@media screen and (max-width: 768px) {
-    @keyframes spin {
-        0% {
-            transform: rotate(0deg);
-            /* Initial position and rotation */
-        }
-
-        100% {
-            transform: rotate(360deg);
-            /* Keep translate during rotation */
-        }
-    }
-
-    .spin-wheel {
-        left: 25%;
-    }
+.matrix-table tbody {
+    display: table-row-group;
 }
 
-.spin-wheel {
-    animation: spin 2s linear infinite;
+.matrix-table th td:nth-child(1),
+.matrix-table tr td:nth-child(1) {
+    min-width: 1.75rem;
+    max-width: 1.75rem;
 }
 
-/* Loading spinner */
-.lds-spinner,
-.lds-spinner div,
-.lds-spinner div:after {
-    box-sizing: border-box;
+.matrix-table th,
+.matrix-table tr {
+    line-height: 1.25rem;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
-.lds-spinner {
-    color: currentColor;
-    display: inline-block;
-    position: relative;
+.matrix-table tr td,
+.matrix-table tr th {
+    border: 1px solid #b5b5b5;
+    padding: 5px;
+    text-align: center;
+    color: #efefef;
+    max-width: 3.5rem;
 }
 
-.lds-spinner div {
-    transform-origin: 40px 40px;
-    animation: lds-spinner 1.2s linear infinite;
+.matrix-table th td {
+    min-width: 3.5625rem;
 }
 
-.lds-spinner div:after {
-    content: " ";
-    display: block;
-    position: absolute;
-    top: 3.2px;
-    left: 36.8px;
-    width: 6.4px;
-    height: 17.6px;
-    border-radius: 20%;
-    background: currentColor;
+.matrix-table td {
+    max-height: 1.5rem;
+    min-width: 3.5rem;
+    width: 3.5rem;
+    padding: 0.25rem;
+    border-width: 1px;
+    border-color: rgb(209 213 219);
 }
 
-.lds-spinner div:nth-child(1) {
-    transform: rotate(0deg);
-    animation-delay: -1.1s;
-}
-
-.lds-spinner div:nth-child(2) {
-    transform: rotate(30deg);
-    animation-delay: -1s;
-}
-
-.lds-spinner div:nth-child(3) {
-    transform: rotate(60deg);
-    animation-delay: -0.9s;
-}
-
-.lds-spinner div:nth-child(4) {
-    transform: rotate(90deg);
-    animation-delay: -0.8s;
-}
-
-.lds-spinner div:nth-child(5) {
-    transform: rotate(120deg);
-    animation-delay: -0.7s;
-}
-
-.lds-spinner div:nth-child(6) {
-    transform: rotate(150deg);
-    animation-delay: -0.6s;
-}
-
-.lds-spinner div:nth-child(7) {
-    transform: rotate(180deg);
-    animation-delay: -0.5s;
-}
-
-.lds-spinner div:nth-child(8) {
-    transform: rotate(210deg);
-    animation-delay: -0.4s;
-}
-
-.lds-spinner div:nth-child(9) {
-    transform: rotate(240deg);
-    animation-delay: -0.3s;
-}
-
-.lds-spinner div:nth-child(10) {
-    transform: rotate(270deg);
-    animation-delay: -0.2s;
-}
-
-.lds-spinner div:nth-child(11) {
-    transform: rotate(300deg);
-    animation-delay: -0.1s;
-}
-
-.lds-spinner div:nth-child(12) {
-    transform: rotate(330deg);
-    animation-delay: 0s;
-}
-
-@keyframes lds-spinner {
-    0% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-    }
+.matrix-table-input-cell {
+    height: 1.3125rem;
+    width: 2.875rem;
+    text-align: center;
+    background-color: #fff;
+    color: #000;
+    font-size: 13px;
 }
