--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -18,3 +18,45 @@
         transform: translateY(0px);
     }
 }
+
+@keyframes table-fade-in-from-none {
+    0% {
+        display: none;
+        opacity: 0;
+        -webkit-transform: translateY(-90px);
+        transform: translateY(-90px);
+    }
+
+    30% {
+        display: block;
+        opacity: 0;
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+        -webkit-transform: translateY(0px);
+        transform: translateY(0px);
+    }
+}
+
+@keyframes table-fade-out-from-none {
+    0% {
+        display: none;
+        opacity: 1;
+        -webkit-transform: translateY(0px);
+        transform: translateY(0px);
+    }
+
+    30% {
+        display: block;
+        opacity: 1;
+    }
+
+    70% {
+        display: none;
+        opacity: 0;
+        -webkit-transform: translateY(-90px);
+        transform: translateY(-90px);
+    }
+}
