adding `scrollWithSVGs` atom

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -341,3 +341,8 @@ ol {
     border-bottom-width: 1px;
     border-bottom-color: #1F1D20;
 }
+
+.svg-up, .svg-down {
+    fill: #006CBC;
+    cursor: pointer;
+}
