--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -273,16 +273,20 @@ ol {
     padding: 0.25rem 0.625rem;
     background-color: rgb(66 65 67);
     /* Soft background shadow */
-    background-image: linear-gradient(180deg, #49484a, #424143);
+    background-image: linear-gradient(180deg, #484749, #464547);
     border: 1px solid #333;
     border-radius: 0.5rem;
     white-space: nowrap;
 }
 
+.btn-brighter {
+    background-image: linear-gradient(180deg, #4D4C4F, #5B5A5C);
+}
+
 .btn:hover {
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, .2);
     border: 1px solid #333;
-    background-image: linear-gradient(180deg, #49484a, #424143);
+    background-image: linear-gradient(180deg, #49484A, #424143);
 }
 
 .btn:disabled {
@@ -323,7 +327,7 @@ table {
     padding: 5px;
     text-align: center;
     color: #efefef;
-    max-width: 3.5rem;
+    max-width: fit-content;
 }
 
 .matrix-table th td {
